--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <nav id="navbar" class="navbar order-last order-lg-0 mt-4">
             <ul>
               <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
-              <li><a class="nav-link scrollto" href="#about">About</a></li>
+              <li><a class="nav-link scrollto" href="#about">About Us</a></li>
               <!-- <li><a class="nav-link scrollto" href="#services">Features</a></li> -->
               <li><a class="nav-link scrollto" href="#">Brands</a></li>
               <li><a class="nav-link scrollto" href="#pricing2">Products</a></li>
@@ -110,41 +110,71 @@
   
   <main id="main">
     <!-- ======= About Us Section ======= -->
-    <section id="about" class="about">
+    <section id="about" class="about" style="margin-top: 50px;">
       <div class="container">
-
-        <div class="section-title">
-          <h2>About us</h2>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
-        </div>
-
-        <div class="row content">
-          <div class="col-lg-6">
-            <h3>
-              We process more than 1,000 hectares of coconut plantations spread across several islands in Sumatra.
-            </h3>
-            <p>
-              Our company works by directly collecting all coconut products from farmers, starting from semi-husked coconut and turning them into other products such as copra and coconut shell charcoal.            </p>
-            <a href="https://en.wikipedia.org/wiki/Riau" class="btn-learn-more text-center">Learn More</a>
-            <!-- <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-            </ul> -->
+        <div class="row">
+          <div class="col-lg-1"></div>
+          <div class="col-lg-5" data-aos="fade-right" data-aos-duration="1000">
+            <img src="assets/img/Tapioka.jpg" class="aboutImage" alt="tapioka">
           </div>
-          <img class="col-lg-6 mt-2" style="border-radius: 20px;"   src="assets/img/Riau_in_Indonesia.svg.png"></div>
-          <!-- <div class="col-lg-6 pt-4 pt-lg-0">
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
+          <div class="col-lg-5" data-aos="fade-left" data-aos-duration="1000">
+            <h3>
+              <span class="section-title" style="color: #dab41c; font-weight: 700 ;">
+                <b>About</b>
+              </span>
+              <br>
+              <span style="font-size: 40px;">
+                <b>Sahala Company</b>
+              </span> 
+            </h3>
+            <p>&nbsp;</p>
+            <p style="color: #212529; text-align: justify;">
+              <span>
+                <b>Sahala Ekspor Indonesia, PT.</b> is a company engaged in international export 
+                import on <b>Riau's Province,</b> Indonesia. We export various end-to-end international 
+                scale <b>Indonesia coconut, palm, tubers </b>product, and many more.
+                <br>
+                <br>
+                With the vision of increasing Riau's competitiveness in the world, 
+                <b>Sahala Ekspor Indonesia, PT.</b> creates the business ecosystem by 
+                reducing many supply chain entities to reach competitiveness and fairness. 
+                It is reflected in our slogan that is <b>“We help small business 
+                and farmers to reach the global market”</b>
+              </span>
             </p>
-            
-          </div> -->
+            <a href="#pricing2" class="more-info-btn"><b>MORE INFORMATION →</b></a>
+          </div>
+          <div class="col-lg-1"></div>
         </div>
-
       </div>
     </section><!-- End About Us Section -->
+    
+    <!-- ======= About Us 2 Section ======= -->
+    <section id="about" class="about" style="margin-top: 50px;">
+      <div class="container bg-primary">
+        <div class="row">
+          <div class="col-lg-1"></div>
+          <div class="col-lg-5 bg-secondary align-self-center">
+            <h3>
+              <span class="section-title" style="color: #dab41c; font-weight: 700;">
+                <b>Brands</b>
+              </span>
+              <br>
+              <span style="font-size: 40px; font-weight: 400;">
+                <b>We offer various leading product brands.</b>
+              </span> 
+            </h3>
+            <p>&nbsp;</p>
+            <a href="#pricing2" class="more-info-btn"><b>SEE ALL OF OUR BRANDS →</b></a>
+          </div>
+          <div class="col-lg-5">
+            <img src="assets/img/Tapioka.jpg" class="aboutImage" alt="tapioka">
+          </div>
+          <div class="col-lg-1"></div>
+        </div>
+      </div>
+    </section><!-- End About Us 2 Section -->
+
     <!-- ======= Pricing Section ======= -->
     <section id="pricing" class="pricing">
       <div class="container">
