--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </span>
           </h1>
           <!-- <a href="https://youtu.be/3wj4hp1YrUI" class="glightbox play-btn mb-4"></a>   -->
-          <a href="#pricing2" class="get-started-btn scrollto">Learn more</a>
+          <!-- <a href="#pricing2" class="get-started-btn scrollto">Learn more</a> -->
         </div>
       </div>
     </div>
@@ -142,7 +142,7 @@
                 and farmers to reach the global market”</b>
               </span>
             </p>
-            <a href="#pricing2" class="more-info-btn"><b>MORE INFORMATION →</b></a>
+            <a href="#" class="more-info-btn"><b>MORE INFORMATION →</b></a>
           </div>
           <div class="col-lg-1"></div>
         </div>
@@ -151,10 +151,10 @@
     
     <!-- ======= About Us 2 Section ======= -->
     <section id="about" class="about" style="margin-top: 50px;">
-      <div class="container bg-primary">
+      <div class="container">
         <div class="row">
           <div class="col-lg-1"></div>
-          <div class="col-lg-5 bg-secondary align-self-center">
+          <div class="col-lg-5 align-self-center" data-aos="fade-up" data-aos-duration="1000">
             <h3>
               <span class="section-title" style="color: #dab41c; font-weight: 700;">
                 <b>Brands</b>
@@ -164,11 +164,32 @@
                 <b>We offer various leading product brands.</b>
               </span> 
             </h3>
-            <p>&nbsp;</p>
-            <a href="#pricing2" class="more-info-btn"><b>SEE ALL OF OUR BRANDS →</b></a>
+            <!-- <p>&nbsp;</p> -->
+            <a href="#pricing2" class="more-info-btn mb-5"><b>SEE ALL OF OUR BRANDS →</b></a>
           </div>
-          <div class="col-lg-5">
-            <img src="assets/img/Tapioka.jpg" class="aboutImage" alt="tapioka">
+          <div class="col-lg-5 align-self-center" data-aos="fade-up" data-aos-duration="1000">
+            <img src="assets/img/Tapioka2.jpg" class="aboutImage2 img-fluid" alt="tapioka">
+            <h3>
+              <span class="section-title" style="color: #212529; font-weight: 700; font-size: 28px;">
+                <b>Hutahaean Tapioca Flour</b>
+              </span>
+            </h3>
+            <p style="color: #212529;text-align: justify;">
+              <span >
+                <b>Tapioca flour</b>, or tapioca starch, is a popular, 
+                  <b>gluten-free</b> flour made from the <b>starch of cassava root.</b>
+                  It's perhaps best known for the thick, chewy texture 
+                  it lends to gluten-free baked goods but also works well as 
+                  an allergy-friendly thickener for <b>sauces, soups, puddings, and stews.</b>
+                  <br>
+                  Has <b>grade A quality</b> and complies with <b>international standards</b>,
+                  Available packing <b>25 kg and 50 kg</b>
+                  <br>
+
+              </span> 
+              <br>
+              <a href="#" class="more-info-btn-2"><b>MORE INFORMATION →</b></a>
+            </p>
           </div>
           <div class="col-lg-1"></div>
         </div>
