--- a/index.html
+++ b/index.html
@@ -195,7 +195,21 @@
         </div>
       </div>
     </section><!-- End About Us 2 Section -->
-
+    <!-- ======= Counts Section ======= -->
+    <section id="counts" class="counts d-flex">
+      <div class="container align-self-center" style="width: 50%">
+        <div class="text-center aos-init aos-animate" data-aos="fade-up">
+          <span class="d-block mb-2" style="color: #dab41c;font-weight: bold;font-size: 1.125rem;">
+            Production
+            <h1 class="text-white" style="font-weight: bolder">
+              There are many potential export commodities in Riau seen from the various sector.      
+            </h1>
+            <a href="#" class="more-info-btn mb-5" style="background-color: #dab41c;" data-aos="fade-right"><b>SEE ALL OF OUR BRANDS →</b></a>
+            <a href="#" class="more-info-btn mb-5" style="background: none;" data-aos="fade-left"><b>SEE ALL OF OUR PRODUCTS →</b></a>
+          </span>
+        </div>
+      </div>
+    </section><!-- End Counts Section -->
     <!-- ======= Pricing Section ======= -->
     <section id="pricing" class="pricing">
       <div class="container">
