--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               </span> 
             </h3>
             <!-- <p>&nbsp;</p> -->
-            <a href="#pricing2" class="more-info-btn mb-5"><b>SEE ALL OF OUR BRANDS →</b></a>
+            <a href="#" class="more-info-btn mb-5"><b>SEE ALL OF OUR BRANDS →</b></a>
           </div>
           <div class="col-lg-5 align-self-center" data-aos="fade-up" data-aos-duration="1000">
             <img src="assets/img/Tapioka2.jpg" class="aboutImage2 img-fluid" alt="tapioka">
@@ -211,51 +211,101 @@
       </div>
     </section><!-- End Counts Section -->
     <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing">
+    <section id="pricing2" class="pricing aos-init aos-animate" data-aos="fade-up">
       <div class="container">
-
-        <div class="section-title">
-          <h2>Our Team</h2>
-          <!-- <p><i>“Microlab Energy is a clean energy company that aims to electrify every people in Indonesia through advanced smart microgrid technology. Let’s meet people behind Microlab Energy”</i></p> -->
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-4 col-md-6">
-            <div class="box">
-              <a href="https://www.linkedin.com/in/samuelparningotan/"><img src="assets/img/profile_1.jpg" style="height: 400px; object-fit: cover;" alt="Michael Kresna Putra" class="img-fluid"></a>
-              <h4 style="margin-top: 10%;"><strong>Samuel Parningotan</strong></h4>
-              <h3><strong>Chief Executive Officer</strong></h3>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6">
-            <div class="box">
-              <a href="https://www.linkedin.com/in/irwandi-samosir-9880671aa/"><img src="assets/img/profile_2.jpg" style="height: 400px; object-fit: cover;" alt="Imam Tri Sulistyo" class="img-fluid"></a>
-              <h4 style="margin-top: 10%;"><strong>Irwandi Samosir</strong></h4>
-              <h3><strong>Chief Operational Officer</strong></h3>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6">
-            <div class="box">
-              <a href="https://www.linkedin.com/in/mamby-aritonang-a4a6a041/"><img src="assets/img/profile_3.jpg" style="height: 400px;object-fit: cover;" alt="Imam Tri Sulistyo" class="img-fluid"></a>
-              <h4 style="margin-top: 10%;"><strong>Mamby Aritonang</strong></h4>
-              <h3><strong>Chief Marketing Officer</strong></h3>
-            </div>
-          </div>
-        </div>
-
+        <h1 class="mb-5" style="font-size: 40px;font-weight: bolder;">Our Products</h1>     
       </div>
-    </section><!-- End Pricing Section -->
+    
+    <div uk-slider="clsActivated: uk-transition-active; center: true; finite: false; pause-on-hover: true; autoplay: true; autoplay-interval: 3500;">
+      <div class="uk-position-relative uk-visible-toggle uk-light">
+          <ul class="uk-slider-items uk-child-width-1-2@s uk-grid">
+              <li>
+                  <div class="uk-card uk-card-default p-5">
+                      <div class="uk-card-media-top card-img-top">
+                          <img class = "uk-img" src="assets/img/palmbroom.jpeg" alt="">
+                      </div>
+                      <div class="uk-card-body">
+                          <h3 class="uk-card-title"><strong>Palm Broom Stick</strong></h3>
+                          <p style="color: #212529;text-align: justify;">
+                            <span >
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                                <br>
+                                <p>&nbsp</p>
+                                <a href="#" class="more-info-btn-2"><b>MORE INFORMATION →</b></a>
+                            </span> 
+                            <br>
+                          </p>
+                      </div>
+                  </div>
+              </li>
+              <li>
+                  <div class="uk-card uk-card-default p-5">
+                      <div class="uk-card-media-top card-img-top">
+                          <img  class ="uk-img" src="assets/img/work-3.png" alt="">
+                      </div>
+                      <div class="uk-card-body">
+                          <h3 class="uk-card-title"><strong>Coconut Shell Charcoal</strong></h3>
+                          <p style="color: #212529;text-align: justify;">
+                            <span >
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                                <br>
+                                <p>&nbsp</p>
+                                <a href="#" class="more-info-btn-2"><b>MORE INFORMATION →</b></a>
+                            </span> 
+                            <br>
+                            
+                          </p>
+                        </div>
+                  </div>
+              </li>
+              <li>
+                  <div class="uk-card uk-card-default p-5">
+                      <div class="uk-card-media-top card-img-top">
+                          <img class = "uk-img img-responsive converthere" src="assets/img/Documentation/Semi-Husked Coconut 5.jpg" alt="">
+                      </div>
+                      <div class="uk-card-body">
+                          <h3 class="uk-card-title"><strong>Semi Husked Coconut</strong></h3>
+                          <p style="color: #212529;text-align: justify;">
+                            <span >
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                                <br>
+                                <p>&nbsp</p>
+                                <a href="#" class="more-info-btn-2"><b>MORE INFORMATION →</b></a> 
+                            </span> 
+                            <br>
+                          </p>
+                        </div>
+                  </div>
+              </li>
+          </ul>
+  
+          <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+          <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+  
+      </div>
+  
+      <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
+  
+  </div>
+  </section><!-- End Pricing Section -->
+  <!-- ======= Counts Section ======= -->
+  <section id="counts" class="counts2 d-flex">
+    <div class="container align-self-center" style="width: 50%">
+      <div class="text-center aos-init aos-animate" data-aos="fade-up">
+        <span class="d-block mb-2" style="color: #dab41c;font-weight: bold;font-size: 1.5rem;">
+          Our Partners
+          <p>&nbsp;</p>
+          <img class="partners" src="assets/img/LogoPartner/All.png" alt="">
+          <!-- <a href="#" class="more-info-btn mb-5" style="background-color: #dab41c;" data-aos="fade-right"><b>SEE ALL OF OUR BRANDS →</b></a>
+          <a href="#" class="more-info-btn mb-5" style="background: none;" data-aos="fade-left"><b>SEE ALL OF OUR PRODUCTS →</b></a> -->
+        </span>
+      </div>
+    </div>
+  </section><!-- End Counts Section -->
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
       <div class="container">
-
-        <div class="section-title">
-          <h2>Why Ecofams Indonesia</h2>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
-        </div>
+          <h1 class="mb-5" style="font-size: 40px;font-weight: bolder;">Why Us</h1>     
 
         <div class="row text-center">
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
