--- a/about.html
+++ b/about.html
@@ -84,22 +84,14 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
   <!-- <section id="hero"> -->
     <video autoplay muted loop id="myVideo">
-      <source src="assets/background.mp4" type="video/mp4">
+      <source src="assets/background2.mp4" type="video/mp4">
     </video>
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-8" data-aos="fade-up" data-aos-duration="1000">
           <!-- <h2>Supplying across the globe</h2> -->
           <h1>
-            <span>
-              Lead
-            </span>
-            <span style="color: #ffcb13;">
-              SMEs 
-            </span>
-            <span>
-              to reach <br>global markets.
-            </span>
+            Who We Are ?
           </h1>
           <!-- <a href="https://youtu.be/3wj4hp1YrUI" class="glightbox play-btn mb-4"></a>   -->
           <!-- <a href="#pricing2" class="get-started-btn scrollto">Learn more</a> -->
