--- a/index.html
+++ b/index.html
@@ -469,9 +469,9 @@
                 <div class="col aos-init aos-animate" data-aos="fade-right">
                     <div class="my-4">
                         <p class="text-white">About Us</p>
-                        <ul id="menu-about" class="list-menu"><li id="menu-item-1056" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1056"><a href="http://boymaxwell.com/?page_id=632">Activity</a></li>
-<li id="menu-item-1057" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1057"><a href="http://boymaxwell.com/?page_id=451">Meet Our Team</a></li>
-<li id="menu-item-1058" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1058"><a href="http://boymaxwell.com/?page_id=455">Who We Are</a></li>
+                        <ul id="menu-about" class="list-menu"><li id="menu-item-1056" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1056"><a href="about.html">Activity</a></li>
+<li id="menu-item-1057" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1057"><a href="about.html">Meet Our Team</a></li>
+<li id="menu-item-1058" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1058"><a href="about.html">Who We Are</a></li>
 </ul>                    </div>
                     <div class="my-4">
                         <p class="text-white">Innovations</p>
