push palm broom sticc

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <li><a class="nav-link scrollto" href="about.html">About Us</a></li>
               <!-- <li><a class="nav-link scrollto" href="#services">Features</a></li> -->
               <li><a class="nav-link scrollto" href="#">Brands</a></li>
-              <li><a class="nav-link scrollto" href="#pricing2">Products</a></li>
+              <li><a class="nav-link scrollto" href="index.html#pricing2">Products</a></li>
               <li><a class="nav-link scrollto" href="#">Contact</a></li>
               <!-- <li><a class="nav-link scrollto" href="documentation.html">Documentation</a></li> -->
               <!-- <li><a class="nav-link scrollto " href="portofolio.html">Portfolio</a></li> -->
@@ -222,7 +222,7 @@
               <li>
                   <div class="uk-card uk-card-default p-5">
                       <div class="uk-card-media-top card-img-top">
-                          <img class = "uk-img" src="assets/img/palmbroom.jpeg" alt="">
+                          <img class = "uk-img" src="assets/img/palmbroom2.png" alt="">
                       </div>
                       <div class="uk-card-body">
                           <h3 class="uk-card-title"><strong>Palm Broom Stick</strong></h3>
@@ -231,7 +231,7 @@
                               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
                                 <br>
                                 <p>&nbsp</p>
-                                <a href="#" class="more-info-btn-2"><b>MORE INFORMATION →</b></a>
+                                <a href="product_palm.html" class="more-info-btn-2"><b>MORE INFORMATION →</b></a>
                             </span> 
                             <br>
                           </p>
