--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               <li>
                   <div class="uk-card uk-card-default p-5">
                       <div class="uk-card-media-top card-img-top">
-                          <img class = "uk-img" src="assets/img/palmbroom2.png" alt="">
+                          <img class = "uk-img" src="assets/img/palmbroom2.jpeg" alt="">
                       </div>
                       <div class="uk-card-body">
                           <h3 class="uk-card-title"><strong>Palm Broom Stick</strong></h3>
