--- a/product_charcoal.html
+++ b/product_charcoal.html
@@ -84,14 +84,14 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
   <!-- <section id="hero"> -->
     <video autoplay muted loop id="myVideo">
-      <source src="assets/background_palm.mp4" type="video/mp4">
+      <source src="assets/background_charcoal.mp4" type="video/mp4">
     </video>
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-8" data-aos="fade-up" data-aos-duration="1000">
           <!-- <h2>Supplying across the globe</h2> -->
           <h1>
-            Palm Broom Stick
+            Coconut Shell Charcoal
           </h1>
           <!-- <a href="https://youtu.be/3wj4hp1YrUI" class="glightbox play-btn mb-4"></a>   -->
           <!-- <a href="#pricing2" class="get-started-btn scrollto">Learn more</a> -->
@@ -107,7 +107,7 @@
         <div class="row">
           <div class="col-lg-1"></div>
           <div class="col-lg-5" data-aos="fade-right" data-aos-duration="1000">
-            <img src="assets/img/palmbroom2.jpeg" class="aboutImage" alt="tapioka">
+            <img src="assets/img/Arang (4).jpg" class="aboutImage" alt="tapioka">
           </div>
           <div class="col-lg-5" data-aos="fade-left" data-aos-duration="1000">
             <h3>
@@ -116,20 +116,29 @@
               </span>
               <br>
               <span style="font-size: 40px;">
-                <b>Palm Broom Stick</b>
+                <b>Coconut Shell Charcoal</b>
               </span> 
             </h3>
-            <p>&nbsp;</p>
+            <!-- <p>&nbsp;</p> -->
             <p style="color: #212529; text-align: justify;">
               <span>
-                A <b>broom</b> is a cleaning tool consisting of stiff fibers attached to, 
-                and roughly parallel to, a cylindrical handle, the <b>Palm Broom Sticks</b>
-                It is thus a variety of brush with a long handle.
-                It is commonly used in combination with a dustpan.
-                A smaller whisk broom or brush is sometimes called a duster.
+                <b>Coconut shell charcoal</b> is an <b>important product</b> derived from <b>coconut shells</b>. Shell charcoal is
+                widely used  as a <b>household and industrial fuel</b>. Shell charcoal is also used in the production of 
+                <b>activated carbon</b>. Activated carbon made from coconut shells has certain <b>advantages</b> because the 
+                raw material can <b>absorb</b> certain types of molecules. The shell is carbonized  using methods such 
+                as the pit method, drum method, and destructive distillation. 
                 <br>
-                We provide palm broom stick with <b>best quality</b> and <b>competitive price</b>,
-                there's 2 type of this product we provide (<b>Cut Bottom</b> and <b>No Cut Bottom</b>)
+                Cocoshell charcoal is very suitable as a raw material for activated carbon and briquettes. 
+                Otherwise,  you can immediately use the 
+                for cooking, grilling and grilling to enjoy green energy. Baking in coconut charcoal means getting
+                an eco-friendly and sustainable product. Also, the fire does not add chemicals to the coconut 
+                charcoal, so it burns cleanly. It's a  real wooden grill rather than a charcoal briquette. There is 
+                no coconut flavor. The smell of  charcoal is fairly neutral, except for the smell of grill smoke, 
+                which focuses on grilled food
+                <br>
+                Coconut Shell Charcoal has proven to be a suitable material for the development of golf courses
+                At golf courses, before planting grass, a layer of charcoal from the coconut shell  is laid down
+                with sand and other biomass to the specified depth.
               </span>
             </p>
             <!-- <a href="#" class="more-info-btn"><b>MORE INFORMATION →</b></a> -->
