--- a/index.html
+++ b/index.html
@@ -228,7 +228,16 @@
                           <h3 class="uk-card-title"><strong>Palm Broom Stick</strong></h3>
                           <p style="color: #212529;text-align: justify;">
                             <span >
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                              <span>
+                                A <b>broom</b> is a cleaning tool consisting of stiff fibers attached to, 
+                                and roughly parallel to, a cylindrical handle, the <b>Palm Broom Sticks</b>
+                                It is thus a variety of brush with a long handle.
+                                It is commonly used in combination with a dustpan.
+                                A smaller whisk broom or brush is sometimes called a duster.
+                                <br>
+                                We provide palm broom stick with <b>best quality</b> and <b>competitive price</b>,
+                                there's 2 type of this product we provide (<b>Cut Bottom</b> and <b>No Cut Bottom</b>)
+                              </span>
                                 <br>
                                 <p>&nbsp</p>
                                 <a href="product_palm.html" class="more-info-btn-2"><b>MORE INFORMATION →</b></a>
@@ -250,7 +259,7 @@
                               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
                                 <br>
                                 <p>&nbsp</p>
-                                <a href="#" class="more-info-btn-2"><b>MORE INFORMATION →</b></a>
+                                <a href="product_charcoal.html" class="more-info-btn-2"><b>MORE INFORMATION →</b></a>
                             </span> 
                             <br>
                             
