--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
   <!-- <section id="hero"> -->
     <video autoplay muted loop id="myVideo">
-      <source src="assets/background.mp4" type="video/mp4">
+      <source src="assets/background1.mp4" type="video/mp4">
     </video>
     <div class="container">
       <div class="row justify-content-center">
@@ -256,7 +256,11 @@
                           <h3 class="uk-card-title"><strong>Coconut Shell Charcoal</strong></h3>
                           <p style="color: #212529;text-align: justify;">
                             <span >
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                              <b>Coconut shell charcoal</b> is an <b>important product</b> derived from <b>coconut shells</b>. Shell charcoal is
+                widely used  as a <b>household and industrial fuel</b>. Shell charcoal is also used in the production of 
+                <b>activated carbon</b>. Activated carbon made from coconut shells has certain <b>advantages</b> because the 
+                raw material can <b>absorb</b> certain types of molecules. The shell is carbonized  using methods such 
+                as the pit method, drum method, and destructive distillation. 
                                 <br>
                                 <p>&nbsp</p>
                                 <a href="product_charcoal.html" class="more-info-btn-2"><b>MORE INFORMATION →</b></a>
@@ -276,10 +280,14 @@
                           <h3 class="uk-card-title"><strong>Semi Husked Coconut</strong></h3>
                           <p style="color: #212529;text-align: justify;">
                             <span >
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                              Known for its <b>high quality packaging technology to prevent rot and discoloration</b>. 
+                This maintains the <b>freshness</b> and <b>nutritional value</b> of the product. 
+                Since it <b>does not use harmful fertilizers or pesticides</b>, it is <b>highly evaluated for its safety and nutritional value.</b>
+                These coconuts <b>add a unique flavor and aroma to flavorful and sweet foods</b>.
+                They are also used for <b>medicinal purposes</b>. Semi Husked coconuts has many uses and is a desirable product all over the world.
                                 <br>
                                 <p>&nbsp</p>
-                                <a href="#" class="more-info-btn-2"><b>MORE INFORMATION →</b></a> 
+                                <a href="product_coconut.html" class="more-info-btn-2"><b>MORE INFORMATION →</b></a> 
                             </span> 
                             <br>
                           </p>
