--- a/product_charcoal.html
+++ b/product_charcoal.html
@@ -151,90 +151,6 @@
             <div class="col-lg-5" data-aos="fade-left" data-aos-duration="1000">
               <h3>
                 <span class="section-title" style="color: #dab41c; font-weight: 700 ;">
-                  <b>Detail</b>
-                </span>
-                <br>
-                <span style="font-size: 40px;">
-                  <b>Palm Broom Stick - Cut Bottom</b>
-                </span> 
-              </h3>
-              <p>&nbsp;</p>
-              <p style="color: #212529; text-align: justify;">
-                <span>
-                  Palm Broom Stick Variation, where we <b>cut the bottom / hump</b>
-                  <br>
-                  Our <b>Specification</b> : 
-                  <ul style="color: #212529">
-                      <li>
-                          Length : 85 – 120 cm
-                      </li>
-                      <li>
-                        Dry
-                      </li>
-                      <li>
-                        Mold Free
-                      </li>
-                      <li>
-                        Not with Hump / Bottom
-                      </li>
-                  </ul>
-                </span>
-              </p>
-              <!-- <a href="#" class="more-info-btn"><b>MORE INFORMATION →</b></a> -->
-            </div>
-            <div class="col-lg-5" data-aos="fade-right" data-aos-duration="1000">
-                <img src="assets/img/palmbroom.png" class="aboutImage" alt="tapioka">
-              </div>
-            <div class="col-lg-1"></div>
-        </div>
-        <div class="row mt-5">
-            <div class="col-lg-1"></div>
-            <div class="col-lg-5" data-aos="fade-right" data-aos-duration="1000">
-              <img src="assets/img/palmbroom3.png" class="aboutImage" alt="tapioka">
-            </div>
-            <div class="col-lg-5" data-aos="fade-left" data-aos-duration="1000">
-              <h3>
-                <span class="section-title" style="color: #dab41c; font-weight: 700 ;">
-                  <b>Detail</b>
-                </span>
-                <br>
-                <span style="font-size: 40px;">
-                  <b>Palm Broom Stick - Not Cut Bottom</b>
-                </span> 
-              </h3>
-              <p>&nbsp;</p>
-              <p style="color: #212529; text-align: justify;">
-                <span>
-                  Palm Broom Stick Variation, where we <b>not cut the bottom / hump</b>
-                  <br>
-                  Our <b>Specification</b> : 
-                  <ul style="color: #212529">
-                      <li>
-                          Length : 85 – 120 cm
-                      </li>
-                      <li>
-                        Dry
-                      </li>
-                      <li>
-                        Mold Free
-                      </li>
-                      <li>
-                        With Hump / Bottom
-                      </li>
-                  </ul>
-                </span>
-              </p>
-              <!-- <a href="#" class="more-info-btn"><b>MORE INFORMATION →</b></a> -->
-            </div>
-            <div class="col-lg-1"></div>
-        </div>
-        <p>nbsp;</p>
-        <div class="row mt-5">
-            <div class="col-lg-1"></div>
-            
-            <div class="col-lg-5" data-aos="fade-left" data-aos-duration="1000">
-              <h3>
-                <span class="section-title" style="color: #dab41c; font-weight: 700 ;">
                   <b>Detail about</b>
                 </span>
                 <br>
@@ -253,9 +169,9 @@
                   <br>
                   4. <b>FOB Price</b> : Need Inquiry
                   <br>
-                  5. <b>MOQ</b> : 25 MTs / 1 x 40 ft container 
+                  5. <b>MOQ</b> : 20 MTs
                   <br>
-                  6. <b>Port of Discharge</b> : Port of Belawan, Indonesia
+                  6. <b>Port of Discharge</b> : Port of Tanjung Priok, Indonesia
                   <br>
                   7. <b>Packaging Detail</b> : PP Waterproof Bag (50kgs)
                   <br>
@@ -268,6 +184,22 @@
                 <img src="assets/img/ask.jpg" class="aboutImage" alt="tapioka">
               </div>
             <div class="col-lg-1"></div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-lg-1"></div>
+          <div class="col-lg-10" data-aos="fade-up" data-aos-duration="1000">
+            <h3>
+              <span class="section-title" style="color: #dab41c; font-weight: 700 ;">
+                <b>Detail about</b>
+              </span>
+              <br>
+              <span style="font-size: 40px;">
+                <b>Our Certification</b>
+              </span> 
+            </h3>
+            <img src="assets/img/Arang_Sertifikat.png" class="aboutImage3" alt="tapioka">
+          </div>
+          <div class="col-lg-1"></div>
         </div>
       </div>
     </section><!-- End About Us Section -->
