--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
               <li><a class="nav-link scrollto" href="about.html">About Us</a></li>
               <!-- <li><a class="nav-link scrollto" href="#services">Features</a></li> -->
-              <li><a class="nav-link scrollto" href="#">Brands</a></li>
+              <li><a class="nav-link scrollto" href="brands.html">Brands</a></li>
               <li><a class="nav-link scrollto" href="index.html#pricing2">Products</a></li>
               <li><a class="nav-link scrollto" href="#">Contact</a></li>
               <!-- <li><a class="nav-link scrollto" href="documentation.html">Documentation</a></li> -->
@@ -142,7 +142,7 @@
                 and farmers to reach the global market”</b>
               </span>
             </p>
-            <a href="#" class="more-info-btn"><b>MORE INFORMATION →</b></a>
+            <a href="about.html" class="more-info-btn"><b>MORE INFORMATION →</b></a>
           </div>
           <div class="col-lg-1"></div>
         </div>
@@ -165,7 +165,7 @@
               </span> 
             </h3>
             <!-- <p>&nbsp;</p> -->
-            <a href="#" class="more-info-btn mb-5"><b>SEE ALL OF OUR BRANDS →</b></a>
+            <a href="brands.html" class="more-info-btn mb-5"><b>SEE ALL OF OUR BRANDS →</b></a>
           </div>
           <div class="col-lg-5 align-self-center" data-aos="fade-up" data-aos-duration="1000">
             <img src="assets/img/Tapioka2.jpg" class="aboutImage2 img-fluid" alt="tapioka">
@@ -188,7 +188,7 @@
 
               </span> 
               <br>
-              <a href="#" class="more-info-btn-2"><b>MORE INFORMATION →</b></a>
+              <a href="brands.html" class="more-info-btn-2"><b>MORE INFORMATION →</b></a>
             </p>
           </div>
           <div class="col-lg-1"></div>
@@ -204,8 +204,8 @@
             <h1 class="text-white" style="font-weight: bolder">
               There are many potential export commodities in Riau seen from the various sector.      
             </h1>
-            <a href="#" class="more-info-btn mb-5" style="background-color: #dab41c;" data-aos="fade-right"><b>SEE ALL OF OUR BRANDS →</b></a>
-            <a href="#" class="more-info-btn mb-5" style="background: none;" data-aos="fade-left"><b>SEE ALL OF OUR PRODUCTS →</b></a>
+            <a href="brands.html" class="more-info-btn mb-5" style="background-color: #dab41c;" data-aos="fade-right"><b>SEE ALL OF OUR BRANDS →</b></a>
+            <a href="index.html#pricing2" class="more-info-btn mb-5" style="background: none;" data-aos="fade-left"><b>SEE ALL OF OUR PRODUCTS →</b></a>
           </span>
         </div>
       </div>
@@ -498,16 +498,16 @@
                     <div class="my-4">
                         <p class="text-white">Product and commodity</p>
                         <ul id="menu-product-and-commodity" class="list-menu">
-<li id="menu-item-300" class="menu-item menu-item-type-post_type menu-item-object-products menu-item-300"><a href="#">Palm Broom Stick</a></li>
-<li id="menu-item-301" class="menu-item menu-item-type-post_type menu-item-object-products menu-item-301"><a href="#">Coconut Shell Charcoal</a></li>
-<li id="menu-item-302" class="menu-item menu-item-type-post_type menu-item-object-products menu-item-302"><a href="#">Semi Husked Coconut</a></li>
+<li id="menu-item-300" class="menu-item menu-item-type-post_type menu-item-object-products menu-item-300"><a href="product_palm.html">Palm Broom Stick</a></li>
+<li id="menu-item-301" class="menu-item menu-item-type-post_type menu-item-object-products menu-item-301"><a href="product_charcoal.html">Coconut Shell Charcoal</a></li>
+<li id="menu-item-302" class="menu-item menu-item-type-post_type menu-item-object-products menu-item-302"><a href="product_coconut.html">Semi Husked Coconut</a></li>
 </ul>                    </div>
                 </div>
                 <div class="col-12 col-md-2 aos-init aos-animate" data-aos="fade-right">
                     <div class="my-4">
                         <p class="text-white">Brands</p>
                         <ul id="menu-brands" class="list-menu">
-                          <li id="menu-item-1060" class="menu-item menu-item-type-post_type menu-item-object-brands menu-item-1060"><a href="#">Hutahean Tapioca Flour</a></li>
+                          <li id="menu-item-1060" class="menu-item menu-item-type-post_type menu-item-object-brands menu-item-1060"><a href="brands.html">Hutahean Tapioca Flour</a></li>
                         </ul>   
                     </div>
                 </div>
