--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSVloxAPx6YL5wnIqxaON8JlEYZmkTlsj41B5Hmxh4TRYdcGiIGzitD9rW_g5_mH_ncB0DHBcZS5a_j/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
   </div> -->
   <!-- ======= Header ======= -->
+  <!-- ======= Header ======= -->
   <header id="header" class="fixed-top w-75" data-aos="fade-down" data-aos-duration="1000">
     <div class="container-fluid">
       <div class="row justify-content-center">
@@ -57,7 +58,8 @@
               <!-- <li><a class="nav-link scrollto" href="#services">Features</a></li> -->
               <li><a class="nav-link scrollto" href="brands.html">Brands</a></li>
               <li><a class="nav-link scrollto" href="index.html#pricing2">Products</a></li>
-              <li><a class="nav-link scrollto" href="#">Contact</a></li>
+              <li><a class="nav-link scrollto" href="doc.html">Documentation</a></li>
+              <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
               <!-- <li><a class="nav-link scrollto" href="documentation.html">Documentation</a></li> -->
               <!-- <li><a class="nav-link scrollto " href="portofolio.html">Portfolio</a></li> -->
               <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li> -->
