--- a/product_palm.html
+++ b/product_palm.html
@@ -55,9 +55,10 @@
               <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
               <li><a class="nav-link scrollto" href="about.html">About Us</a></li>
               <!-- <li><a class="nav-link scrollto" href="#services">Features</a></li> -->
-              <li><a class="nav-link scrollto" href="#">Brands</a></li>
+              <li><a class="nav-link scrollto" href="brands.html">Brands</a></li>
               <li><a class="nav-link scrollto" href="index.html#pricing2">Products</a></li>
-              <li><a class="nav-link scrollto" href="#">Contact</a></li>
+              <li><a class="nav-link scrollto" href="doc.html">Documentation</a></li>
+              <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
               <!-- <li><a class="nav-link scrollto" href="documentation.html">Documentation</a></li> -->
               <!-- <li><a class="nav-link scrollto " href="portofolio.html">Portfolio</a></li> -->
               <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li> -->
@@ -356,16 +357,16 @@
                     <div class="my-4">
                         <p class="text-white">Product and commodity</p>
                         <ul id="menu-product-and-commodity" class="list-menu">
-<li id="menu-item-300" class="menu-item menu-item-type-post_type menu-item-object-products menu-item-300"><a href="#">Palm Broom Stick</a></li>
-<li id="menu-item-301" class="menu-item menu-item-type-post_type menu-item-object-products menu-item-301"><a href="#">Coconut Shell Charcoal</a></li>
-<li id="menu-item-302" class="menu-item menu-item-type-post_type menu-item-object-products menu-item-302"><a href="#">Semi Husked Coconut</a></li>
+<li id="menu-item-300" class="menu-item menu-item-type-post_type menu-item-object-products menu-item-300"><a href="product_palm.html">Palm Broom Stick</a></li>
+<li id="menu-item-301" class="menu-item menu-item-type-post_type menu-item-object-products menu-item-301"><a href="product_charcoal.html">Coconut Shell Charcoal</a></li>
+<li id="menu-item-302" class="menu-item menu-item-type-post_type menu-item-object-products menu-item-302"><a href="product_coconut.html">Semi Husked Coconut</a></li>
 </ul>                    </div>
                 </div>
                 <div class="col-12 col-md-2 aos-init aos-animate" data-aos="fade-right">
                     <div class="my-4">
                         <p class="text-white">Brands</p>
                         <ul id="menu-brands" class="list-menu">
-                          <li id="menu-item-1060" class="menu-item menu-item-type-post_type menu-item-object-brands menu-item-1060"><a href="#">Hutahean Tapioca Flour</a></li>
+                          <li id="menu-item-1060" class="menu-item menu-item-type-post_type menu-item-object-brands menu-item-1060"><a href="brands.html">Hutahean Tapioca Flour</a></li>
                         </ul>   
                     </div>
                 </div>
