need last fixing

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-9 d-flex align-items-center justify-content-lg-between">
           <a href="index.html" class="logo me-auto me-lg-0 mt-4"><img src="assets\img\LogoV2.png" alt="Logo"  style="width: auto;height: auto;object-fit: cover;"></a>
-          <nav id="navbar" class="navbar order-last order-lg-0 mt-4">
+          <nav id="navbar" class="navbar order-last order-lg-0">
             <ul>
               <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
               <li><a class="nav-link scrollto" href="about.html">About Us</a></li>
@@ -88,7 +88,7 @@
     <video autoplay muted loop id="myVideo">
       <source src="assets/background1.mp4" type="video/mp4">
     </video>
-    <div class="container">
+    <div class="container" style="z-index: 2">
       <div class="row justify-content-center">
         <div class="col-xl-8" data-aos="fade-up" data-aos-duration="1000">
           <!-- <h2>Supplying across the globe</h2> -->
