--- a/brands.html
+++ b/brands.html
@@ -87,7 +87,7 @@
     <video autoplay muted loop id="myVideo">
       <source src="assets/background.mp4" type="video/mp4">
     </video>
-    <div class="container">
+    <div class="container" style="z-index: 2">
       <div class="row justify-content-center">
         <div class="col-xl-8" data-aos="fade-up" data-aos-duration="1000">
           <!-- <h2>Supplying across the globe</h2> -->
